syntax = "proto3";

package event.v1;

import "event/v1/common.proto";
import "event/v1/event.proto";

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
  rpc GetBooking(GetBookingRequest) returns (GetBookingResponse);
  rpc ListBookings(ListBookingsRequest) returns (ListBookingsResponse);
  rpc DeleteBooking(DeleteBookingRequest) returns (DeleteBookingResponse);
}

message Booking {
  string id = 1;
  string booking_holder_key = 2;
  string slot_id = 3;
  Slot slot = 4;
  TimeData date_time = 5;
  int32 persons = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message CreateBookingRequest {
  string booking_holder_key = 1;
  string slot_id = 2;
  string date_time = 3;
  int32 persons = 4;
}

message CreateBookingResponse {
  Booking booking = 1;
}

message GetBookingRequest {
  string id = 1;
}

message GetBookingResponse {
  Booking booking = 1;
}

message DeleteBookingRequest {
  string id = 1;
}

message DeleteBookingResponse {
  string message = 1;
}

message ListBookingsRequest {
  Filters filters = 1;
}

message ListBookingsResponse {
  repeated Booking bookings = 1;
}
